RAM optimization, adding checkpoint / resume